<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Consumer VPN</string>
    <string name="app_homepage">https://www.wlvpn.com</string>
    <string name="title_activity_about">About</string>
    <string name="location_flag">Location Flag</string>
    <string name="menu_item_logout">Logout</string>
    <string name="finding_best_server">Finding best server</string>
    <string name="cancel">Cancel</string>
    <string name="menu_item_about">About</string>
    <string name="links_not_supported_message">Opening web links is not supported on this device.</string>

    <!-- Preferences -->
    <string name="startup_title">Startup</string>
    <string name="connection_title">Connection</string>

    <!-- Preferences Startup -->
    <string name="startup_do_not_connect">Do not automatically connect</string>
    <string name="startup_connect_to_last">Connect to last connected server</string>
    <string name="startup_connect_to_fastest">Connect to fastest server</string>
    <string name="startup_connect_to_fastest_country">Connect to fastest server in country</string>

    <!-- Preferences Auto Reconnect -->
    <string name="auto_reconnect">Auto Reconnect</string>

    <!-- Preferences Scramble -->
    <string name="scramble">Scramble</string>

    <!-- Preferences Protocol -->
    <string name="protocol_title">Protocol</string>
    <string name="protocol_vpn_tcp">OpenVPN (TCP)</string>
    <string name="protocol_vpn_udp">OpenVPN (UDP)</string>
    <string name="protocol_default">@string/protocol_vpn_tcp</string>

    <!-- Preferences Ports -->
    <string name="port_title">OpenVPN AES-256 Port</string>
    <string name="port_443">443</string>
    <string name="port_1194">1194</string>
    <string name="port_default">@string/port_443</string>
    <string name="search">Search</string>
    <string name="content_description_dot_map">Background image of a map</string>

    <!--Image Descriptions -->
    <string name="accessibility_logo">Logo</string>
    <string name="accessibility_logo_banner">Logo banner</string>
    <string name="accessibility_username_icon">Username icon</string>
    <string name="accessibility_password_icon">Password icon</string>
    <string name="accessibility_globe_icon">Globe icon</string>
    <string name="accessibility_location_icon">Location icon</string>
    <string name="accessibility_encryption_icon">Encryption icon</string>

    <!-- Connection -->
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="connected_visible_location">Visible Location</string>
    <string name="connected_public_ip">Public IP</string>
    <string name="connected_protocol_option">Encryption</string>
    <string name="no_tun_module_found">Required software missing</string>
    <string name="no_tun_module_found_message">Software to run this app is missing (TUN module). Please download and install it and run %s; setup again later.</string>
    <string name="no_tun_module_found_install_button">Install</string>
    <string name="no_tun_module_found_cancel_button">Cancel</string>
    <string name="disconnecting">Disconnecting</string>

    <!-- Login -->
    <string name="title_activity_login">Login</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_unknown_error">Unknown Error</string>
    <string name="no_connection">No Connection</string>
    <string name="username_password_invalid">Username or password not valid</string>
    <string name="login_forgot_username_password">Forgot Username/Password?</string>
    <string name="login_failed">Login failed.</string>

    <!-- Main Encryption Tabs -->
    <string name="slider_default_location">Choose a Location</string>
    <string name="slider_choose_encryption">Choose Your Encryption Preference</string>
    <string name="secure">secure</string>
    <string name="fast">fast</string>
    <string name="fastest">fastest</string>
    <string name="fast_title">Fast!</string>
    <string name="fastest_title">Fastest!</string>
    <string name="secure_title">Secure!</string>
    <string name="encryption_none_title">NONE</string>
    <string name="encryption_fast_title">AES-128</string>
    <string name="encryption_secure_title">AES-256</string>

    <!-- Logout Dialog -->
    <string name="alert_dialog_title_logout_confirmation">Logout Confirmation</string>
    <string name="alert_dialog_message_logout_confirmation">Are you sure you would like to log out?</string>
    <string name="alert_dialog_positive_button">Logout</string>
    <string name="alert_dialog_negative_button">Cancel</string>

    <!-- Locations -->
    <string name="title_activity_location">Server Locations</string>
    <string name="sort_by_country">Sort by country</string>
    <string name="sort_by_city">Sort by city</string>
    <string name="sort">Sort</string>
    <string name="best_available">Best Available</string>
    <string name="best_available_location">Best Available Location</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_disconnect_alert_title">Disconnect</string>
    <string name="settings_disconnect_alert_message">You cannot change your settings without first disconnecting.</string>
    <string name="settings_disconnect_alert_positive">Disconnect</string>
    <string name="settings_disconnect_alert_negative">Cancel</string>

    <!-- Notifications -->
    <string name="notification_vpn_connection_channel_title">Connection</string>
    <string name="notification_vpn_connecting_content">%1$s/s %2$s - %3$s/s %4$s</string>
    <string name="notification_vpn_connected_title">Connected to %1$s, %2$s</string>
    <string name="notification_vpn_action_disconnect">Disconnect</string>
    <!-- Revoke Permissions -->
    <string name="notification_vpn_connection_revoke_title">VPN Permissions Revoked</string>
    <string name="notification_vpn_connection_revoke_content">The app permissions to connect the VPN where revoke by another app</string>
    <!-- Maintenance -->
    <string name="notification_scheduled_maintenance_title">Scheduled Maintenance</string>
    <string name="notification_scheduled_maintenance_content">Your connected server is scheduled for maintenance at %1$s. Switch servers to avoid being disconnected.</string>
    <string name="notification_scheduled_maintenance_switch_servers">Switch Servers</string>

    <!-- Vpn Permissions Dialog -->
    <string name="vpn_permission_dialog_body">%s requires your permission to connect to a VPN. Please try again.\n </string>
    <string name="vpn_permission_denial_dialog_always_on_vpn">\nIf you have other VPN clients please try to turn off "Always-on VPN" on settings</string>
    <string name="vpn_permission_dialog_title">Permission error</string>
    <string name="vpn_permission_action_go">Take me to VPN Settings</string>
    <string name="vpn_permission_action_retry">Retry</string>
    <string name="vpn_permissions_not_found">Please, open settings manually to allow vpn permissions</string>

</resources>
