<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/activity_about_iv_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/accessibility_logo"
        android:scaleType="fitXY"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/activity_about_tv_brandname"
        style="@style/WLVPNTextViewMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/app_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/activity_about_tv_version"
        style="@style/WLVPNTextViewMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        tools:text="Version" />

    <TextView
        android:id="@+id/activity_about_tv_brand_homepage"
        style="@style/WLVPNTextViewMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autoLink="web"
        android:clickable="true"
        android:linksClickable="true"
        android:text="@string/app_homepage"
        android:textColorLink="@color/color_primary_text" />

</LinearLayout>